Revert 0.2 -> 0.2-SNAPSHOT Trying to decrease SQALE index